# wc_python

./: README.md  pyproject.toml
src/wc_python/: __main__.py
src/wc_python/utils/: file_utils.py  state_report.py  stdin_utils.py
