[project]
name = "wc-python"
version = "0.7.0"
description = "A recreation of Unix WC utility in python"
authors = [
    {name = "BlackDandel10n",email = "blackdandel10n@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "wc_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
